<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/observation_info_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/observation_info_horizontal_margin"
        android:background="@drawable/bg_summary_sticky_header"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:weightSum="656">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="101"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/label_classroom_observation_log_column_time"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Title1.Small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="286"
            android:text="@string/label_classroom_observation_log_column_teacher"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Title1.Small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="269"
            android:text="@string/label_classroom_observation_log_column_student"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Title1.Small" />

    </LinearLayout>

</FrameLayout>